--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h4 class="title"> FRESH & TASTY </h4>
         </div>
         <div class="icon">
-            <i class="fa-solid fa-angle-down"></i>
+            <a href="#footer"><i class="fa-solid fa-angle-down"></i></a>
         </div>
     </main>
 
@@ -107,10 +107,10 @@
                 </div>
             </div>
         </div>
-        <div class="product-4"></div>
+        <div class="product-4"></div> 
         <!----------------------  Product End  ---------------------->
         <!----------------------  Footer ---------------------->
-        <footer>
+        <footer id="footer">
               <div class="footer-container">
                   <div class="logo-box">
                       <h6>FOOD</h6>
